...
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/toggle_dark_mode"
            app:layout_constraintEnd_toStartOf="@+id/toggle_dark_mode_switch"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/toggle_dark_mode_switch"
...
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/toggle_color_blind"
            app:layout_constraintEnd_toStartOf="@+id/toggle_color_blind_switch"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/toggle_dark_mode_switch" />

        <Switch
            android:id="@+id/toggle_color_blind_switch"
...
